[form-builder] Fix vertical alignment of portable text editor toolbar insert menu button

--- a/packages/@sanity/form-builder/src/inputs/arrays/PortableText/Toolbar/InsertMenu.css
+++ b/packages/@sanity/form-builder/src/inputs/arrays/PortableText/Toolbar/InsertMenu.css
@@ -2,6 +2,9 @@
 
 .root {
   position: relative;
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .menu {
